Add first version of async generation protocol
